# pika-assembly

./: .gitignore  .gitmodules  CMakeLists.txt  CmakeLists.txt.in  README.md  factorial  fibonacci  input  instructions  instructions.cpp  instructions_handler.py  main.cpp  old_instructions  output  solve_square
headers/: CompileInstructions.h  ExecuteInstructions.h  GeneratedInstructions.h  Instructions.h  InstructionsDefines.h  InstructionsUndefs.h  PikaCompiler.h  PikaExecutor.h
sources/: CustomInstuctions.cpp  GeneratedInstructions.cpp  Instructions.cpp  PikaCompiler.cpp  PikaExecutor.cpp
